nesc-frontend/src/test/resources/lexer/invalidtokens/InvalidNumber.nc
configuration InvalidNumber {
} implementation {
    float invalid = 1234.5K;
}